# pitch-tts

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html  main.js  output.json  package-lock.json  package.json
examples/: basic_usage.rs
setup/: download_assets.js
src/: lib.rs  main.rs
src/blender-plugin/: __init__.py  package.sh
src/blender-plugin/text_to_face_blender/: __init__.py
src/blender-plugin/text_to_face_blender/text_to_face_blender/: __init__.py
src/cli/: main.rs
src/cli/commands/: export.rs  list.rs  say.rs
src/commands/: export.rs  list.rs  say.rs
src/lib/: lib.rs
tests/: basic_tests.rs  cli_tests.rs  test.sh
