[package]
name = "pitch-tts"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "pitch-tts"
path = "src/main.rs"

[lib]
name = "pitch_tts"
path = "src/lib.rs"

[dependencies]
piper-rs = "0.1.9"
ort-sys = { version = "=2.0.0-rc.9", default-features = false } 
rodio = "0.20.1"
serde_json = "1.0"
hound = "3.5"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }

[workspace]
resolver = "2"

[env]
RUST_TEST_THREADS = "1"