[package]
name = "text-to-face"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "text-to-face"
path = "src/main.rs"

[lib]
name = "text_to_face"
path = "src/lib.rs"

[dependencies]
piper-rs = "0.1.9"
ort-sys = { version = "=2.0.0-rc.9", default-features = false } 
rodio = "0.20.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hound = "3.5"
clap = { version = "4.4", features = ["derive"] }
rubato = "0.16"
cmudict-fast = "0.8"
once_cell = "1.19"
colored = "2.1"

[features]
default = []
lip-sync = []

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }

[workspace]
resolver = "2"
